9028 libc: comparison between pointer and zero character constant

../port/gen/nlspath_checks.c: In function 'clean_env':
../port/gen/nlspath_checks.c:629:30: error: comparison between pointer and zero character constant [-Werror=pointer-compare]
   for (p++; (p[-off] = p[0]) != '\0'; p++)
                              ^~
../port/gen/nlspath_checks.c:629:13: note: did you mean to dereference the pointer?
   for (p++; (p[-off] = p[0]) != '\0'; p++)
             ^
cc1: all warnings being treated as errors