usr/src/lib/libc/port/gen/nlspath_checks.c
@@ -626,7 +626,7 @@ clean_env(void)
 	else if (issetugid()) {			/* Found and set-uid, clean */
 		int off = 1;
 
-		for (p++; (p[-off] = p[0]) != '\0'; p++)
+		for (p++; (p[-off] = p[0]) != NULL; p++)
 			if (**p == 'N' && nvmatch("NLSPATH", *p) != NULL)
 				off++;
 
